cmake_minimum_required(VERSION 3.10)
project(mm)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
aux_source_directory(src SRC_LIST)
aux_source_directory(test TEST_SRC)
add_library(mm ${SRC_LIST})
target_include_directories(mm PUBLIC include)
target_compile_options(mm PUBLIC -Wall -pedantic -D_DEBUG)
add_executable(test ${TEST_SRC})
target_link_libraries(test mm)
target_include_directories(test PUBLIC include)
target_link_directories(test PUBLIC ./out/build/defaultCmake)